--- a/app.ipynb
+++ b/app.ipynb
@@ -819,6 +819,206 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                   VersionNote: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "------------------------- --------------\n",
+      "aiofiles                  23.2.1\n",
+      "altair                    5.4.1\n",
+      "annotated-types           0.7.0\n",
+      "anyio                     4.4.0\n",
+      "argon2-cffi               23.1.0\n",
+      "argon2-cffi-bindings      21.2.0\n",
+      "arrow                     1.3.0\n",
+      "asttokens                 2.4.1\n",
+      "async-lru                 2.0.4\n",
+      "attrs                     24.2.0\n",
+      "babel                     2.16.0\n",
+      "beautifulsoup4            4.12.3\n",
+      "bleach                    6.1.0\n",
+      "blinker                   1.8.2\n",
+      "cachetools                5.5.0\n",
+      "certifi                   2024.7.4\n",
+      "cffi                      1.17.0\n",
+      "charset-normalizer        3.3.2\n",
+      "click                     8.1.7\n",
+      "colorama                  0.4.6\n",
+      "comm                      0.2.2\n",
+      "contourpy                 1.3.0\n",
+      "cycler                    0.12.1\n",
+      "debugpy                   1.8.5\n",
+      "decorator                 5.1.1\n",
+      "defusedxml                0.7.1\n",
+      "Deprecated                1.2.14\n",
+      "executing                 2.0.1\n",
+      "fastapi                   0.115.2\n",
+      "fastjsonschema            2.20.0\n",
+      "ffmpy                     0.4.0\n",
+      "filelock                  3.16.1\n",
+      "fonttools                 4.53.1\n",
+      "fqdn                      1.5.1\n",
+      "fsspec                    2024.9.0\n",
+      "gitdb                     4.0.11\n",
+      "GitPython                 3.1.43\n",
+      "gradio                    5.1.0\n",
+      "gradio_client             1.4.0\n",
+      "h11                       0.14.0\n",
+      "httpcore                  1.0.5\n",
+      "httpx                     0.27.0\n",
+      "huggingface-hub           0.26.0\n",
+      "idna                      3.7\n",
+      "ipykernel                 6.29.5\n",
+      "ipython                   8.26.0\n",
+      "ipywidgets                8.1.5\n",
+      "isoduration               20.11.0\n",
+      "jedi                      0.19.1\n",
+      "Jinja2                    3.1.4\n",
+      "joblib                    1.4.2\n",
+      "json5                     0.9.25\n",
+      "jsonpointer               3.0.0\n",
+      "jsonschema                4.23.0\n",
+      "jsonschema-specifications 2023.12.1\n",
+      "jupyter                   1.0.0\n",
+      "jupyter_client            8.6.2\n",
+      "jupyter-console           6.6.3\n",
+      "jupyter_core              5.7.2\n",
+      "jupyter-events            0.10.0\n",
+      "jupyter-lsp               2.2.5\n",
+      "jupyter_server            2.14.2\n",
+      "jupyter_server_terminals  0.5.3\n",
+      "jupyterlab                4.2.4\n",
+      "jupyterlab_pygments       0.3.0\n",
+      "jupyterlab_server         2.27.3\n",
+      "jupyterlab_widgets        3.0.13\n",
+      "kiwisolver                1.4.7\n",
+      "markdown-it-py            3.0.0\n",
+      "MarkupSafe                2.1.5\n",
+      "matplotlib                3.9.2\n",
+      "matplotlib-inline         0.1.7\n",
+      "mdurl                     0.1.2\n",
+      "mistune                   3.0.2\n",
+      "narwhals                  1.9.4\n",
+      "nbclient                  0.10.0\n",
+      "nbconvert                 7.16.4\n",
+      "nbformat                  5.10.4\n",
+      "nest-asyncio              1.6.0\n",
+      "notebook                  7.2.1\n",
+      "notebook_shim             0.2.4\n",
+      "numpy                     2.1.1\n",
+      "orjson                    3.10.7\n",
+      "overrides                 7.7.0\n",
+      "packaging                 24.1\n",
+      "pandas                    2.2.2\n",
+      "pandocfilters             1.5.1\n",
+      "parso                     0.8.4\n",
+      "pillow                    10.4.0\n",
+      "pip                       24.2\n",
+      "platformdirs              4.2.2\n",
+      "prometheus_client         0.20.0\n",
+      "prompt_toolkit            3.0.47\n",
+      "protobuf                  5.28.2\n",
+      "psutil                    6.0.0\n",
+      "pure_eval                 0.2.3\n",
+      "pyarrow                   17.0.0\n",
+      "pycparser                 2.22\n",
+      "pydantic                  2.9.2\n",
+      "pydantic_core             2.23.4\n",
+      "pydeck                    0.9.1\n",
+      "pydub                     0.25.1\n",
+      "Pygments                  2.18.0\n",
+      "pyparsing                 3.1.4\n",
+      "python-dateutil           2.9.0.post0\n",
+      "python-json-logger        2.0.7\n",
+      "python-multipart          0.0.12\n",
+      "pytz                      2024.1\n",
+      "pywin32                   306\n",
+      "pywinpty                  2.0.13\n",
+      "PyYAML                    6.0.2\n",
+      "pyzmq                     26.2.0\n",
+      "qtconsole                 5.5.2\n",
+      "QtPy                      2.4.1\n",
+      "referencing               0.35.1\n",
+      "requests                  2.32.3\n",
+      "rfc3339-validator         0.1.4\n",
+      "rfc3986-validator         0.1.1\n",
+      "rich                      13.9.2\n",
+      "rpds-py                   0.20.0\n",
+      "ruff                      0.7.0\n",
+      "scikit-learn              1.5.2\n",
+      "scipy                     1.14.1\n",
+      "seaborn                   0.13.2\n",
+      "semantic-version          2.10.0\n",
+      "Send2Trash                1.8.3\n",
+      "setuptools                73.0.1\n",
+      "shellingham               1.5.4\n",
+      "six                       1.16.0\n",
+      "smmap                     5.0.1\n",
+      "sniffio                   1.3.1\n",
+      "soupsieve                 2.6\n",
+      "stack-data                0.6.3\n",
+      "starlette                 0.40.0\n",
+      "streamlit                 1.39.0\n",
+      "tenacity                  9.0.0\n",
+      "terminado                 0.18.1\n",
+      "threadpoolctl             3.5.0\n",
+      "tinycss2                  1.3.0\n",
+      "toml                      0.10.2\n",
+      "tomlkit                   0.12.0\n",
+      "tornado                   6.4.1\n",
+      "tqdm                      4.66.5\n",
+      "traitlets                 5.14.3\n",
+      "typer                     0.12.5\n",
+      "types-python-dateutil     2.9.0.20240821\n",
+      "typing_extensions         4.12.2\n",
+      "tzdata                    2024.1\n",
+      "uri-template              1.3.0\n",
+      "urllib3                   2.2.2\n",
+      "uvicorn                   0.32.0\n",
+      "watchdog                  5.0.3\n",
+      "wcwidth                   0.2.13\n",
+      "webcolors                 24.8.0\n",
+      "webencodings              0.5.1\n",
+      "websocket-client          1.8.0\n",
+      "websockets                12.0\n",
+      "widgetsnbextension        4.0.13\n",
+      "wrapt                     1.16.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    model = joblib.load(\"tips.pkl\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error loading model: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
