Heart_decises_prediction

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1929,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1939,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1974,6 +1974,19 @@
     "    return new_func\n",
     "\n",
     "@deprecated\n",
+    "def old_function():\n",
+    "    print(\"This function is deprecated.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deprecated import deprecated\n",
+    "\n",
+    "@deprecated(reason=\"This function will be removed in future versions.\")\n",
     "def old_function():\n",
     "    print(\"This function is deprecated.\")"
    ]
