Heart_decises_prediction

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1980,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1989,6 +1989,56 @@
     "@deprecated(reason=\"This function will be removed in future versions.\")\n",
     "def old_function():\n",
     "    print(\"This function is deprecated.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deprecated import deprecated\n",
+    "\n",
+    "@deprecated(reason=\"This function will be removed in future versions.\")\n",
+    "def old_function():\n",
+    "    print(\"This function is deprecated.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This function is deprecated.\n",
+      "This is the new function.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Akshitha\\AppData\\Local\\Temp\\ipykernel_28464\\4144505204.py:11: DeprecationWarning: Call to deprecated function (or staticmethod) old_function. (This function will be removed in future versions.)\n",
+      "  old_function()\n"
+     ]
+    }
+   ],
+   "source": [
+    "from deprecated import deprecated\n",
+    "\n",
+    "@deprecated(reason=\"This function will be removed in future versions.\")\n",
+    "def old_function():\n",
+    "    print(\"This function is deprecated.\")\n",
+    "\n",
+    "def new_function():\n",
+    "    print(\"This is the new function.\")\n",
+    "\n",
+    "# Example of calling the function\n",
+    "old_function()\n",
+    "new_function()"
    ]
   },
   {
