--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,25 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (3607156816.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    df = pd.read_csv(\"C:\\Users\\Akshitha\\New folder\\nareshit\\heart_data.csv\")\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"C:\\Users\\Akshitha\\New folder\\nareshit\\heart_data.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +87,7 @@
        "2   57    1  124         261              1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +610,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +650,7 @@
        "       [ 9, 12]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +670,7 @@
        "0.6666666666666666"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +690,7 @@
        "np.float64(0.5714285714285714)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +710,7 @@
        "np.float64(0.5714285714285714)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +730,7 @@
        "np.float64(0.5714285714285714)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1167,7 @@
        "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1210,7 @@
        "       [ 8, 13]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1230,7 @@
        "0.6111111111111112"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1250,7 @@
        "np.float64(0.5)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1270,7 @@
        "np.float64(0.6190476190476191)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1290,7 @@
        "np.float64(0.5531914893617021)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1329,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1745,7 +1727,7 @@
        "DecisionTreeClassifier()"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1758,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1777,17 +1759,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[22, 11],\n",
+       "array([[21, 12],\n",
        "       [ 8, 13]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1798,16 +1780,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6481481481481481"
+       "0.6296296296296297"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1818,16 +1800,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.5416666666666666)"
+       "np.float64(0.52)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1838,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1847,7 +1829,7 @@
        "np.float64(0.6190476190476191)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1858,16 +1840,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.5777777777777777)"
+       "np.float64(0.5652173913043478)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1878,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1888,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1898,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1908,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1917,7 +1899,7 @@
        "['logistic.pkl']"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1929,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1939,7 +1921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1948,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1961,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1980,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1993,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2006,7 +1988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2021,7 +2003,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Akshitha\\AppData\\Local\\Temp\\ipykernel_28464\\4144505204.py:11: DeprecationWarning: Call to deprecated function (or staticmethod) old_function. (This function will be removed in future versions.)\n",
+      "C:\\Users\\Akshitha\\AppData\\Local\\Temp\\ipykernel_16940\\4144505204.py:11: DeprecationWarning: Call to deprecated function (or staticmethod) old_function. (This function will be removed in future versions.)\n",
       "  old_function()\n"
      ]
     }
